# py3status

./: Makefile  README.md  py3status.py  pyproject.toml  requirements-dev.txt  requirements.txt
py3status/: __main__.py
